--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "express": "^4.17.1",
     "nodemon": "^2.0.4"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "parcel-bundler": "^1.12.4"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
@@ -22,5 +24,14 @@
   "bugs": {
     "url": "https://github.com/jasonericdavis/DK_Picker/issues"
   },
-  "homepage": "https://github.com/jasonericdavis/DK_Picker#readme"
+  "homepage": "https://github.com/jasonericdavis/DK_Picker#readme",
+  
+  "@comment browserslists": [
+    "I dont like having to adding this but for some reason",
+    "async doesnt work with parcel out of the box"
+  ],
+  
+  "browserslist": [
+    "Chrome 78"
+  ]
 }
