--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "dk_picker",
+  "name": "ff_picker",
   "version": "1.0.0",
-  "description": "DraftKings Draft picker",
-  "main": "server.js",
+  "description": "Fantasy Footbal picker",
   "dependencies": {
-    "express": "^4.17.1",
-    "nodemon": "^2.0.4"
+    "next": "^9.5.3",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.12.4",
-    "node-forge": ">=0.10.0"
+    "@types/node": "^14.11.2",
+    "@types/react": "^16.9.50",
+    "@types/react-dom": "^16.9.8",
+    "typescript": "^4.0.3"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "next",
+    "build": "next build",
+    "start": "next start"
   },
   "repository": {
     "type": "git",
