Cleaned up data display
- used react to display positions in columns
- added tailwindcss [#4]

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "next": "^9.5.3",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "tailwindcss": "^1.8.10"
   },
   "devDependencies": {
     "@types/node": "^14.11.2",
