added some more ratio info to the data.json file

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "parse": "node parser.js"
   },
   "repository": {
     "type": "git",
