--- a/parser/tsconfig.json
+++ b/parser/tsconfig.json
@@ -1,18 +1,11 @@
 {
     "compilerOptions": {
-      "target": "es5",
-      "lib": ["es2020"],
-      "allowJs": true,
-      "skipLibCheck": true,
-      "strict": false,
-      "forceConsistentCasingInFileNames": true,
-      "noEmit": true,
-      "esModuleInterop": true,
       "module": "commonjs",
+      "target": "es5",
+      "esModuleInterop": true,
       "moduleResolution": "node",
       "resolveJsonModule": true,
-      "isolatedModules": true,
-      "jsx": "preserve"
+      "lib": ["ESNext"]
     },
     "include": [
       "*.ts"
