--- a/parser/tsconfig.json
+++ b/parser/tsconfig.json
@@ -1,11 +1,12 @@
 {
     "compilerOptions": {
-      "module": "commonjs",
       "target": "es5",
+      "module": "commonjs",
+      "lib": ["es6"],
+      "outDir": "./dist",
       "esModuleInterop": true,
       "moduleResolution": "node",
       "resolveJsonModule": true,
-      "lib": ["ESNext"]
     },
     "include": [
       "*.ts"
