--- a/parser/tsconfig.json
+++ b/parser/tsconfig.json
@@ -3,7 +3,7 @@
       "target": "es5",
       "module": "commonjs",
       "lib": ["es6"],
-      "outDir": "./dist",
+      "outDir": "../dist/parser",
       "esModuleInterop": true,
       "moduleResolution": "node",
       "resolveJsonModule": true,
