--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -7,10 +7,12 @@
   "devDependencies": {
     "@types/node": "^14.11.2",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "shared-lib": "*"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node dist/index.js"
   },
   "repository": {
     "type": "git",
