working on project structure

--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -9,9 +9,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '12.x'
-      - run: cd packages/parser
-      - run: npm install
-      - run: npx tsc --build ./parser
+      - run: yarn install
+      - run: yarn workspace parser tsc --build .
 
   check-bats-version:
     runs-on: ubuntu-latest
