--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -1,31 +1,33 @@
 {
-    "name": "parser",
-    "version": "1.0.0",
-    "description": "parser for the fantasy football picker",
-    "main": "index.ts",
-    "dependencies": {},
-    "devDependencies": {
-      "@types/node": "^14.11.2",
-      "ts-node": "^9.0.0",
-      "typescript": "^4.0.3",
-      "shared-lib": "*"
-    },
-    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "node dist/index.js"
-    },
-    "repository": {
-      "type": "git",
-      "url": "git+https://github.com/jasonericdavis/FF_Picker.git"
-    },
-    "keywords": [
-      "nodejs"
-    ],
-    "author": "Jason Eric Davis",
-    "license": "MIT",
-    "bugs": {
-      "url": "https://github.com/jasonericdavis/FF_Picker/issues"
-    },
-    "homepage": "https://github.com/jasonericdavis/FF_Picker#readme"
-  }
-  
+  "name": "parser",
+  "version": "1.0.0",
+  "description": "parser for the fantasy football picker",
+  "main": "index.ts",
+  "dependencies": {},
+  "devDependencies": {
+    "@types/jest": "^26.0.15",
+    "@types/node": "^14.11.2",
+    "jest": "^26.6.3",
+    "shared-lib": "*",
+    "ts-jest": "^26.4.3",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.3"
+  },
+  "scripts": {
+    "test": "jest",
+    "start": "node dist/index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jasonericdavis/FF_Picker.git"
+  },
+  "keywords": [
+    "nodejs"
+  ],
+  "author": "Jason Eric Davis",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/jasonericdavis/FF_Picker/issues"
+  },
+  "homepage": "https://github.com/jasonericdavis/FF_Picker#readme"
+}
