added player parser tests

--- a/packages/parser/tsconfig.json
+++ b/packages/parser/tsconfig.json
@@ -7,9 +7,11 @@
       "esModuleInterop": true,
       "moduleResolution": "node",
       "resolveJsonModule": true,
+      "declaration": true
     },
     "include": [
       "src/*.ts"
-    ]
+    ],
+    "exclude": ["node_modules"]
   }
   
