--- a/packages/shared-lib/package.json
+++ b/packages/shared-lib/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "shared package for fanatasy football picker",
   "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "typings": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc -b ."
