--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -10,6 +10,7 @@ jobs:
         with:
           node-version: '12.x'
       - run: yarn install
+      - run: yarn workspace shared-lib tsc -b
       - run: yarn workspace parser tsc --build .
       - run: yarn test
 
