--- a/package.json
+++ b/package.json
@@ -2,11 +2,21 @@
   "name": "ff_picker",
   "version": "1.0.0",
   "description": "Fantasy Football Picker",
-  "private": true,
-  "workspaces": ["packages/*"],
-  "dependencies": {},
-  "devDependencies": {},
-  "scripts": {},
+  "dependencies": {
+    "next": "^10.0.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "tailwindcss": "^2.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.9",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "typescript": "^4.1.2"
+  },
+  "scripts": {
+    "dev": "next dev"
+  },
   "repository": "git+https://github.com/jasonericdavis/FF_Picker.git",
   "author": "Jason Davis <jason@jasonericdavis.dev>",
   "license": "MIT",
