--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Fantasy Football Picker",
   "dependencies": {
+    "@supabase/supabase-js": "^1.22.4",
     "next": "^10.0.2",
     "puppeteer": "^10.2.0",
     "react": "^17.0.1",
@@ -13,6 +14,7 @@
     "@types/node": "^14.14.9",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "dotenv": "^10.0.0",
     "typescript": "^4.1.2"
   },
   "scripts": {
