--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "puppeteer": "^10.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-svg-radar-chart": "^1.3.0",
     "tailwindcss": "^2.0.1"
   },
   "devDependencies": {
