--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "ts-node": "^10.2.1"
   },
   "devDependencies": {
+    "@types/jest": "^27.0.1",
     "@types/node": "^14.14.9",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "dotenv": "^10.0.0",
+    "jest": "^27.2.0",
+    "ts-jest": "^27.0.5",
     "typescript": "^4.1.2"
   },
   "scripts": {
