--- a/.github/workflows/data-grabber.yml
+++ b/.github/workflows/data-grabber.yml
@@ -13,5 +13,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
+      - uses: secrethub/actions/env-export@v0.2.1
+        env:
+          DB_URL: ${{ secrets.DB_URL }}
+          DB_PUBLIC_KEY: ${{ secrets.DB_PUBLIC_KEY}}
       - run: npm install
       - run: node index.js
