--- a/.github/workflows/data-grabber.yml
+++ b/.github/workflows/data-grabber.yml
@@ -2,6 +2,9 @@ name: data-getter
 
 on:
   workflow_dispatch:
+  schedule:
+    # Run at 6:30pm UTC every day
+    - cron: 30 12 * * *
 
 defaults:
   run:
