renamed env variables in data-grabber

--- a/.github/workflows/data-grabber.yml
+++ b/.github/workflows/data-grabber.yml
@@ -17,8 +17,8 @@ jobs:
           node-version: '14'
           cache: 'npm'
         env:
-          DB_URL: ${{ secrets.DB_URL }}
-          DB_PUBLIC_KEY: ${{ secrets.DB_PUBLIC_KEY}}
+          SUPABASE_URL: ${{ secrets.DB_URL }}
+          SUPABASE_KEY: ${{ secrets.DB_PUBLIC_KEY}}
       - run: npm install
       - run: npm run build-action-data-grabber
       - run: npm run action-data-grabber
