--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "tailwindcss": "^2.0.1",
-    "ts-node": "^10.2.1"
+    "ts-node": "^10.2.1",
     "react-svg-radar-chart": "^1.3.0",
     "tailwindcss": "^2.0.1"
   },
@@ -27,7 +27,8 @@
   "scripts": {
     "dev": "next dev",
     "get-data": "node ./actions/data-grabber.js",
-    "build-get-data": "ts-node ./actions/data-grabber/index.ts"
+    "build-action-data-grabber": "tsc --project actions/data-grabber",
+    "action-data-grabber": "node actions/data-grabber/lib"
   },
   "repository": "git+https://github.com/jasonericdavis/FF_Picker.git",
   "author": "Jason Davis <jason@jasonericdavis.dev>",
