--- a/.github/workflows/data-grabber.yml
+++ b/.github/workflows/data-grabber.yml
@@ -2,6 +2,14 @@ name: data-getter
 
 on:
   workflow_dispatch:
+  schedule:
+    # Run at 12:00pm UTC (=8am EDT) every Thursday
+    - cron: 0 12 * * 4
+
+defaults:
+  run:
+    working-directory: actions/data-grabber
+
 jobs:
   get-weekly-stats:
     runs-on: ubuntu-latest
