--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "dependencies": {
     "@supabase/supabase-js": "^1.22.4",
     "dayjs": "^1.10.7",
-    "next": "^11.1.2",
+    "next": "^12.0.1",
     "puppeteer": "^10.2.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "ts-node": "^10.2.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-svg-radar-chart": "^1.3.0",
-    "tailwindcss": "^2.0.1"
+    "tailwindcss": "^2.0.1",
+    "ts-node": "^10.2.1"
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
