--- a/.github/workflows/data-grabber.yml
+++ b/.github/workflows/data-grabber.yml
@@ -18,5 +18,5 @@ jobs:
       - run: npm run build-action-data-grabber
       - run: npm run action-data-grabber
         env:
-          SUPABASE_URL: ${{ secrets.DB_URL }}
-          SUPABASE_KEY: ${{ secrets.DB_PUBLIC_KEY}}
+          DB_URL: ${{ secrets.DB_URL }}
+          DB_PUBLIC_KEY: ${{ secrets.DB_PUBLIC_KEY}}
