--- a/.github/workflows/data-grabber.yml
+++ b/.github/workflows/data-grabber.yml
@@ -11,6 +11,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         name: Checkout
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '12'
+          cache: 'npm'
+      - run: npx insall playwright
       - uses: ./.github/actions/data-grabber
         name: Download Data
         env:
