--- a/.github/workflows/data-grabber.yml
+++ b/.github/workflows/data-grabber.yml
@@ -10,13 +10,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        name: Checkout
       - uses: actions/setup-node@v2
         with:
-          node-version: '14'
+          node-version: '12'
           cache: 'npm'
-      - run: npm install
-      - run: npm run build-action-data-grabber
-      - run: npm run action-data-grabber
+      - run: npm install playwright-chromium
+      - uses: ./.github/actions/data-grabber
+        name: Download Data
         env:
           DB_URL: ${{ secrets.DB_URL }}
           DB_PUBLIC_KEY: ${{ secrets.DB_PUBLIC_KEY}}
