--- a/.github/workflows/data-grabber.yml
+++ b/.github/workflows/data-grabber.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           node-version: '12'
           cache: 'npm'
-      - run: npx install playwright
+      - run: npm install playwright
       - uses: ./.github/actions/data-grabber
         name: Download Data
         env:
