--- a/.github/workflows/data-grabber.yml
+++ b/.github/workflows/data-grabber.yml
@@ -15,8 +15,8 @@ jobs:
         with:
           node-version: '12'
           cache: 'npm'
-      - run: npm install playwright
-      - run: npx playwright install
+      - run: npm install playwright-chromium
+      - run: npx playwright-chromium install
       - uses: ./.github/actions/data-grabber
         name: Download Data
         env:
