--- a/.github/workflows/data-grabber.yml
+++ b/.github/workflows/data-grabber.yml
@@ -15,7 +15,8 @@ jobs:
         with:
           node-version: '16'
           cache: 'npm'
-      - uses: microsoft/playwright-github-action@v1
+      - name: Install Playwright
+        run: npx playwright install --with-deps
       - uses: ./.github/actions/data-grabber
         name: Download Data
         env:
