--- a/.github/workflows/data-grabber.yml
+++ b/.github/workflows/data-grabber.yml
@@ -13,10 +13,12 @@ jobs:
         name: Checkout
       - uses: actions/setup-node@v2
         with:
-          node-version: '16'
+          node-version: '14.x'
           cache: 'npm'
+      - name: Install dependencies
+        run: npm ci
       - name: Install Playwright
-        run: npm playwright install --with-deps
+        run: npx playwright install --with-deps
       - uses: ./.github/actions/data-grabber
         name: Download Data
         env:
