--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-svg-radar-chart": "^1.3.0",
-    "tailwindcss": "^2.0.1",
     "ts-node": "^10.2.1"
   },
   "devDependencies": {
@@ -19,8 +18,11 @@
     "@types/node": "^14.14.9",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "autoprefixer": "^10.4.1",
     "dotenv": "^10.0.0",
     "jest": "^27.2.0",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.8",
     "ts-jest": "^27.0.5",
     "typescript": "^4.1.2"
   },
